2016-05-22  Karl Berry  <karl@freefriends.org>

        * tex4ht-c.tex (search_file): return NULL rather than FALSE
        to placate MiKTeX.  Report from Mojca,
        https://sourceforge.net/p/miktex/bugs/2488.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-09-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex4ht.c: Avoid compiler warning [-Wunused-value].

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Moved Makefile fragments to ../../am/.

2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c, tex4ht.c: Always include system headers after
	<kpathsea/config.h>.

2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_COND_WIN32_WRAP.

2013-01-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c, tex4ht.c: Drop set but unused variables.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c, tex4ht.c [WIN32]: More changes from W32TeX.
	Must not free argv.

2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c, tex4ht.c [WIN32]: Use binary mode for output files.
	Pass program name string to kpse_set_program_name.
	Adapt to W32TeX versions.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Adapt to script_links.am using relpath.

2011-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Rename ht{,context,latex,mex,tex,texi,xelatex,xetex} => ht*.sh.
	Rename mk4ht => mk4ht.pl and update from TeX4ht repository.
	* Makefile.am: Use the ../am/script_links.am fragment.

2010-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (install-links): Check symlink creation.
