@@ -1,3 +1,9 @@
+2016-06-14  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (shell_scripts): re-add xhlatex.
+	(EXTRA_DIST): remove from unused list.
+	* xhlatex.sh: rename from xhlatex.
+
 2016-05-22  Karl Berry  <karl@freefriends.org>
 
         * tex4ht-c.tex (search_file): return NULL rather than FALSE
